--- a/CategoryProduct/Web.config
+++ b/CategoryProduct/Web.config
@@ -21,13 +21,18 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="8192"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <globalization culture="auto" uiCulture="auto" enableClientBasedCulture="true"></globalization>
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="8192000"></requestLimits>
+      </requestFiltering>
+    </security>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
